# web-gas-panel

./: app.py  pyproject.toml  requirements.txt
templates/: index.html
web_gas_arduino/src/: main.cpp
